final form change (i think so), tablet not showing sign up button and footer tall screen fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -606,22 +606,9 @@ div a {
 	z-index: 10;
 }
 
-html,
-body {
-	margin:0;
-	padding:0;
-	height:100px;
-}
-#fc {
-	min-height:100%;
-	position:relative;
-}
 #footer {
-	position:absolute;
-	bottom:0;
 	width:100%;
-	height:30px;   /* Height of the footer */
-	/*background:#6cf;*/
+	height:30px;
 	background: #ddd;
 	padding-top: 15px;
 }
